1.0.alpha2 (2012-06-??)
-----------------------

* fixed issue #84 explain command 

* fixed issue #100: "count" attribute exists in cursor response with "count: false"

* fixed issue #103: Should we cleanup the directory structure

* fixed issue #112: do not accept document with duplicate attribute names

* added new MRuby version (2012-06-02)

* added --log.filter

* cleanup of command line options:
** --startup.directory => --javascript.startup-directory
** --quite => --quiet
** --gc.interval => --javascript.gc-interval
** --startup.modules-path => --javascript.modules-path
** --action.system-directory => --javascript.action-directory
** --javascript.action-threads => removed (is now the same pool as --server.threads)

* various bug-fixes

* support for import


1.0.alpha1 (2012-05-28)
-----------------------

Alpha Release of ArangoDB 1.0