@@ -29,6 +29,7 @@ unittests-verbose:
 	@echo "## > make unittests FORCE=1                                                   ##"
 	@echo "## > make unittests SKIP_BOOST=1                                              ##"
 	@echo "## > make unittests SKIP_GEO=1                                                ##"
+	@echo "## > make unittests SKIP_RANGES=1                                             ##"
 	@echo "## > make unittests VALGRIND=valgrind                                         ##"
 	@echo "##                                                                            ##"
 	@echo "################################################################################"
@@ -177,22 +178,6 @@ unittests-shell-server:
 ################################################################################
 
 SHELL_SERVER_AHUACATL = @srcdir@/js/server/tests/ahuacatl-ranges.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-1.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-2.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-3.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-4.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-5.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-6.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-7.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-8.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-9.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-10.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-11.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-12.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-13.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-14.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-15.js \
-			@srcdir@/js/server/tests/ahuacatl-ranges-combined-16.js \
 			@srcdir@/js/server/tests/ahuacatl-escaping.js \
 			@srcdir@/js/server/tests/ahuacatl-functions.js \
 			@srcdir@/js/server/tests/ahuacatl-variables.js \
@@ -212,10 +197,28 @@ SHELL_SERVER_AHUACATL = @srcdir@/js/server/tests/ahuacatl-ranges.js \
 		        @srcdir@/js/server/tests/ahuacatl-queries-noncollection.js \
 		        @srcdir@/js/server/tests/ahuacatl-operators.js
 
+SHELL_SERVER_AHUACATL_EXTENDED = \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-1.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-2.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-3.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-4.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-5.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-6.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-7.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-8.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-9.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-10.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-11.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-12.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-13.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-14.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-15.js \
+			@srcdir@/js/server/tests/ahuacatl-ranges-combined-16.js 
 
 .PHONY: unittests-shell-server-ahuacatl
 
 UNITTESTS_SERVER_AHUACATL = $(addprefix --unit-tests ,$(SHELL_SERVER_AHUACATL))
+UNITTESTS_SERVER_AHUACATL_EXTENDED = $(addprefix --unit-tests ,$(SHELL_SERVER_AHUACATL_EXTENDED))
 
 unittests-shell-server-ahuacatl:
 	@echo
@@ -228,6 +231,8 @@ unittests-shell-server-ahuacatl:
 	@mkdir "$(VOCDIR)"
 
 	$(VALGRIND) @builddir@/bin/arangod "$(VOCDIR)" $(SERVER_OPT) $(UNITTESTS_SERVER_AHUACATL) || test "x$(FORCE)" == "x1"
+
+	@test "x$(SKIP_RANGES)" == "x1" || $(VALGRIND) @builddir@/bin/arangod "$(VOCDIR)" $(SERVER_OPT) $(UNITTESTS_SERVER_AHUACATL_EXTENDED) || test "x$(FORCE)" == "x1"
 
 	@rm -rf "$(VOCDIR)"
 	@echo
@@ -288,7 +293,7 @@ unittests-http-server:
 
 
 ################################################################################
-## BITARRAY INDEXE TESTS
+## BITARRAY INDEXES TESTS
 ################################################################################
 
 BITARRAY_COMMON = @srcdir@/js/common/tests/shell-bitarray-index.js
