@@ -25,6 +25,8 @@
 
 * support for import
 
+* added option SKIP_RANGES=1 for make unittests
+
 
 1.0.alpha1 (2012-05-28)
 -----------------------
